fix media crop to not distort images

--- a/src/css/edit-image.css
+++ b/src/css/edit-image.css
@@ -26,6 +26,7 @@
     width: 263px;
     height: 280px;
     object-fit: scale-down;
+    object-position: top left;
 }
 
 .border {
